tambah page baru dan edit konfigurasi
